Fix #182 werkzeug security issue. This fix includes requirement updates of Werkzeug and Flask Fix of style in query.py Change of tox test to Python39

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, pydocstyle, py27, py38
+envlist = flake8, pydocstyle, py39
 
 
 [testenv:py27]
@@ -11,6 +11,14 @@ deps=
     -rrequirements.txt
 
 [testenv:py38]
+commands = 
+    python -m pytest --doctest-modules ordia
+    python -m pytest tests
+deps=
+    pytest
+    -rrequirements.txt
+
+[testenv:py39]
 commands = 
     python -m pytest --doctest-modules ordia
     python -m pytest tests
